# location_diary

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
frontend/: README.md  env.d.ts  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/cypress/e2e/: auth.cy.ts  events.cy.ts
frontend/cypress/support/: commands.ts
frontend/src/: App.vue  main.ts
frontend/src/__tests__/: App.spec.ts
frontend/src/components/: AppHeader.vue
frontend/src/composables/: useUploadQueue.ts
frontend/src/lib/: diary.ts  format.ts  googleMaps.ts  http.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  (+1 more)
server/: .gitignore  BUILD_PLAN.md  conftest.py  pyproject.toml  requirements.txt
server/apps/common/: params.py
server/apps/events/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
server/apps/events/migrations/: 0001_initial.py  0002_initial.py
server/apps/location/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
server/apps/location/migrations/: 0001_initial.py  0002_initial.py  0003_alter_eventlocation_options_alter_location_options.py
server/apps/media/: apps.py  conftest.py  models.py  pagination.py  serializers.py  signals.py  tests.py  urls.py  views.py
server/apps/media/migrations/: 0001_initial.py  0002_alter_media_options.py  0003_media_point.py
server/apps/users/: backends.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
server/apps/users/migrations/: 0001_initial.py
server/config/: settings.py  urls.py
server/tests/: test_integration.py
(+34 files in other folders)
