[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "psycopg>=3.3.4",
    "pytest>=9.1.0",
    "pytest-django>=4.12.0",
]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
